# vrp-reports

./: .gitignore  README.md  _headers  build.sh  discovery_2015.json  discovery_2016.json  discovery_2017.json  discovery_2018.json  discovery_2019.json  discovery_2020.json  discovery_2021.json  discovery_2022.json  discovery_2023.json  discovery_2024.json  discovery_2025.json  discovery_2026.json  discovery_queue.json  index.json  pyproject.toml  stats.json
.github/workflows/: deploy.yml  scrape.yml  test.yml
docs/: DEPLOYMENT.md
issues/324690505/: report.json  report.md
issues/324770940/: report.json  report.md
issues/324930013/: report.json  report.md
issues/325678240/: report.json  report.md
issues/328958020/: report.json  report.md
issues/329271490/: report.json  report.md
issues/329476341/: report.json  report.md
issues/331123811/: report.json  report.md
issues/332410234/: report.json  report.md
issues/333024273/: report.json  report.md
issues/333313912/: report.json  report.md
issues/333414294/: report.json  report.md
issues/333420620/: report.json  report.md
issues/333508731/: report.json  report.md
issues/335003891/: report.json  report.md
tests/: fixtures.py  test_cli.py  test_discovery.py  test_extractor.py  test_index_builder.py  test_markdown_gen.py  test_parser.py  test_pipeline.py  test_real_world_awards.py  test_server.py  test_utils.py
ui/: index.html  llms.txt  schema.json  skill.md
vrp/: cli.py  config.py  discovery.py  extractor.py  index_builder.py  markdown_gen.py  models.py  parser.py  server.py  utils.py
(+4110 files in other folders)
