[project]
name = "vrp-reports"
version = "1.0.0"
description = "Chromium VRP Bug Bounty Reports Scraper & Dashboard"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40,<2.0",
    "aiohttp>=3.9,<4.0",
    "click>=8.1,<9.0",
    "pydantic>=2.5,<3.0",
    "rich>=13.0,<14.0",
    "markdownify>=0.11,<1.0",
]

[project.scripts]
vrp = "vrp.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["vrp*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
